--- a/users/templates/registration/base.html
+++ b/users/templates/registration/base.html
@@ -1,13 +1,13 @@
 {% load bootstrap3 %}
-{% load staticfiles %}
+{%load static%}
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
+  <link rel="icon" href="{%static 'favicon/instagram.png'%}" type="img/jpg">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine">
   {%if title%}
 
   <title>{{title}}</title>
@@ -16,6 +16,8 @@
 
   {% block styles %}
     {% bootstrap_css %}
+  <link rel="stylesheet" href="{%static 'css/auth.css'%}">
+
   {% endblock %}
 
 </head>
