--- a/users/templates/registration/registration_form.html
+++ b/users/templates/registration/registration_form.html
@@ -1,39 +1,26 @@
 {%extends "registration/base.html"%} {% load bootstrap3 %}
 {% block content %}
-<div class="container">
-  <div class="row">
-    <!-- Empty div -->
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      {% if form.errors %}
-        <p> Some Information Might be Incorrect </p>
-      {% endif %}
-      <div class="panel panel-default">
-
-        <div class="panel-heading">
-          <h3 class="text-center">Sign Up</h3>
-        </div>
-        <div class="panel-body">
-
-          <form  method="post">
-            {% csrf_token %}
-            {% bootstrap_form form %}
-            <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
-            </div>
-
-            <input type="hidden" name="next" value="{{next}}">
-
-          </form>
-
-        </div>
-
-      </div>
-
-    </div>
-    <!-- empty div -->
-    <div class="col-md-4"></div>
+<section id="content">
+  <div class="text-center">
+    {% if form.errors %}
+    <p style="color: red;"> Some Information Might be Incorrect </p>
+    {% endif %}
   </div>
+  <form  method="post">
+    <h2 class="text-center">Instagram</h2>
+    <h1 style="margin-bottom: 1rem;" class="h4 text-center font-weight-normal text-muted">Sign up to see photos and videos from your friends.</h1>
+    {% csrf_token %}
+    {% bootstrap_form form%}
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
+    </div>
+    <input type="hidden" name="next" value="{{next}}">
+    <h1 style="margin-bottom: 1rem;" class="h5 text-center font-weight-normal text-muted">By singing up, you agree to our <strong>Terms</strong> , <strong>Data Policy</strong> and <strong>Cookie Policy</strong> </h1>
+  </form>
+</section>
+<div id = "no_account">
+    <h4>Have an account?<a href="{% url 'home_page' %}"> Log in</a></h4>
 </div>
+
 
 {% endblock %}
