Create not following url and view function

--- a/users/templates/navbar.html
+++ b/users/templates/navbar.html
@@ -29,7 +29,7 @@
         </a>
       </li> 
       <li class="nav-item ">
-        <a class="nav-link" href=""><i class="fas fa-user-plus"></i>
+        <a class="nav-link" href="{%url 'not_following'%}"><i class="fas fa-user-plus"></i>
         </a>
       </li>   
       <li class="nav-item avatar dropdown">
