--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -32,7 +32,7 @@
 
 <body class="body">
   {% include "navbar.html" %}
-  <div class="content container">
+  <div class="instagram-body content container">
     
   {% block content %}{% endblock content %}
   </div>
