--- a/users/templates/navbar.html
+++ b/users/templates/navbar.html
@@ -9,7 +9,7 @@
     aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
+  <div style="width: 100;" class="collapse navbar-collapse" id="navbarSupportedContent-555">
     {%block search%}
     <form class="form-inline mx-auto my-1">
       <div class="md-form form-sm my-0">
@@ -21,7 +21,7 @@
     {%endblock%}
     <ul class="navbar-nav ml-auto nav-flex-icons">
       <li class="nav-item ">
-        <a class="nav-link" href=""><i class="fas fa-home"></i>
+        <a class="nav-link" href="{%url 'home_page'%}"><i class="fas fa-home"></i>
         </a>
       </li>
       <li class="nav-item ">
