--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -11,6 +11,9 @@
   {% else %}
     <title> Instagram </title>
   {% endif %}
+  {%block title%}
+  {%endblock%}
+ 
   <link rel="icon" href="{%static 'favicon/instagram.png'%}" type="img/jpg">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!-- Font Awesome -->
