--- a/users/templates/navbar.html
+++ b/users/templates/navbar.html
@@ -47,7 +47,7 @@
           aria-labelledby="navbarDropdownMenuLink-55">
           <h5 class="text-center"><span class="badge badge-primary">{{profile.user.username}}</span></h2>
           <a class="dropdown-item" href="#"><i class="far fa-user mr-1"></i>PROFILE</a>
-          <a class="dropdown-item" href="#"><i class="fas fa-plus-circle mr-1"></i>CREATE POST</a>
+          <a class="dropdown-item" href="{%url 'new_post'%}"><i class="fas fa-plus-circle mr-1"></i>CREATE POST</a>
           <a class="dropdown-item" href="/logout"><i class="fas fa-sign-out-alt mr-1"></i>LOGOUT</a>
         </div>
       </li>
