--- a/users/templates/navbar.html
+++ b/users/templates/navbar.html
@@ -36,7 +36,7 @@
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-55" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           {%if profile.profile_photo%}
-          <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0"
+          <img src="{{profile.profile_photo.cdn_url}}" onerror="this.onerror=null;this.src='https://www.iconfinder.com/data/icons/user-pictures/100/unknown-512.png';" class="rounded-circle z-depth-0"
             alt="avatar image" height="35">
           {%else%}
           <img src="https://www.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class="rounded-circle z-depth-0"
