--- a/users/templates/navbar.html
+++ b/users/templates/navbar.html
@@ -4,7 +4,7 @@
 {% endblock %}
 <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-light ">
-  <a class="navbar-brand" href="#"><h2>Instagram</h2> </a>
+  <a class="navbar-brand" href="{%url 'home_page'%}"><h2>Instagram</h2> </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
     aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
