--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -5,13 +5,19 @@
 {%endblock%}
 {%block content%}
 <div class="card new_image p-5">
+  <div class="card-header text-center card-header-primary">
+    <h4 class="card-title">Edit Profile</h4>
+    <p class="card-category">Complete your profile</p>
+  </div>
   <div class="card-body">
     <form  action="{%url 'edit_profile'%}" method="post" enctype="multipart/form-data">
       {%csrf_token%}
   
       {% bootstrap_form form%}
       {% bootstrap_form profile_form%}
-      <input type="submit" class="btn btn-success btn-lg" value="UPDATE">
+      <div class="text-center">
+        <input type="submit" class="btn btn-success btn-lg" value="UPDATE">
+      </div>
     </form>
   </div>
 
