--- a/feed/templates/feed/home.html
+++ b/feed/templates/feed/home.html
@@ -1,7 +1,85 @@
 {%extends "base.html"%}
 {%block content%}
-<h2>instagram</h2>
-<li>
-  <a href="/logout">Logout</a>
-</li>
+
+  {%if all_posts%}
+      {%if following%}
+        {%if following_posts%}
+        <div class="posts row">
+          {%for post in following_posts%}
+          <div class="mx-auto mb-2 col-md-4 col-lg-3 col-sm-12">
+            <a class="post" href="{{post.image_path.cdn_url}}">
+              <img style="min-height:160px ;" class="image img-fluid" src="{{post.image_path.cdn_url}}">
+              <span class="d-flex justify-content-between details">
+                <span ><i class="mr-1 far fa-heart"></i>{{post.likes}}</span><br>
+                <span><i class="far fa-comment mr-1"></i>{{post.comments}}</span>
+              </span>
+            </a>
+          </div>
+          {%endfor%}
+        </div>
+        {%else%}
+        <div class="row">
+          <div class="card mb-3 col-4 mx-auto">
+            <div class="card-body">
+              <p class="card-text">The users you are following have posted in a while</p>
+              <a href="{%url 'not_following'%}" class="btn btn-primary">EXPLORE USERS</a>
+            </div>
+          </div>
+        </div>
+        {%for post in all_posts%}
+        <div class="mx-auto mb-2 col-md-4 col-lg-3 col-sm-12">
+          <a class="post" href="{{post.image_path.cdn_url}}">
+            <img style="min-height:160px ;" class="image img-fluid" src="{{post.image_path.cdn_url}}">
+            <span class="d-flex justify-content-between details">
+              <span ><i class="mr-1 far fa-heart"></i>{{post.likes}}</span><br>
+              <span><i class="far fa-comment mr-1"></i>{{post.comments}}</span>
+            </span>
+          </a>
+        </div>
+        {%endfor%}
+        {%endif%}
+      {%else%}
+      <div class="row">
+        <div class="card col-4 mx-auto mb-3">
+          <div class="card-body">
+            <p class="card-text">Follow users to see only their posts</p>
+            <a href="{%url 'not_following'%}" class="btn btn-primary">EXPLORE USERS</a>
+          </div>
+        </div>
+      </div>
+      <div class="posts row">
+        {%for post in all_posts%}
+        <div class="mx-auto mb-2 col-md-4 col-lg-3 col-sm-12">
+          <a class="post" href="{{post.image_path.cdn_url}}">
+            <img style="min-height:160px ;" class="image img-fluid" src="{{post.image_path.cdn_url}}">
+            <span class="d-flex justify-content-between details">
+              <span ><i class="mr-1 far fa-heart"></i>{{post.likes}}</span><br>
+              <span><i class="far fa-comment mr-1"></i>{{post.comments}}</span>
+            </span>
+          </a>
+        </div>
+        {%endfor%}
+      </div>
+      {%endif%}
+    {%else%}
+    <div class="row">
+      <div class="card col-4 mb-3 mx-auto">
+        <div class="card-body">
+          <p class="card-text">Follow users to see their posts</p>
+          <a href="{%url 'not_following'%}" class="btn btn-primary">EXPLORE USERS</a>
+        </div>
+      </div>
+      <div class="card col-4 mb-3 mx-auto">
+        <div class="card-body">
+          <p class="card-text">CREATE POST</p>
+          <a href="{%url 'new_post'%}" class="btn btn-primary">CREATE POSTS</a>
+        </div>
+      </div>
+    </div>
+    {%endif%}
+
+
+
+
+
 {%endblock%}
