--- a/users/templates/users/my_profile.html
+++ b/users/templates/users/my_profile.html
@@ -69,7 +69,7 @@
               {%if posts%}
               {%for post in posts%}
               <div class="mx-auto mb-2 col-md-4 col-lg-3 col-sm-12">
-                <a class="post" href="{{post.image_path.cdn_url}}">
+                <a class="post" href="/feed/post/{{post.id}}">
                   <img style="min-height:160px ;" class="image img-fluid" src="{{post.image_path.cdn_url}}">
                   <span class="d-flex justify-content-between details">
                     <span ><i class="mr-1 far fa-heart"></i>{{post.likes}}</span><br>
