--- a/users/templates/navbar.html
+++ b/users/templates/navbar.html
@@ -4,7 +4,7 @@
 {% endblock %}
 <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-light ">
-  <a class="navbar-brand" href="{%url 'home_page'%}"><h2>Instagram</h2> </a>
+  <a class="navbar-brand" href="{%url 'home_page'%}"> <img src="https://cdn.worldvectorlogo.com/logos/instagram-1.svg" width="20%"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
     aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,6 @@
           <input class="form-control form-control-sm mr-sm-2 mb-0" type="text" placeholder="Search Post"
             aria-label="Search">
         </div>
-        <button class="btn  btn-sm ml-1" type="submit"><i class="fas fa-search"></i></button>
       </form>
       {%endblock%}
       <li class="nav-item ">
