Create feed like post url and view function

--- a/feed/templates/feed/post.html
+++ b/feed/templates/feed/post.html
@@ -28,7 +28,7 @@
     </div>
     <div class="likes">
       <div class="left-icons">
-      <img src="https://image.flaticon.com/icons/svg/25/25424.svg" width="4%"/>
+      <a href="/feed/post/{{post.id}}/like/"><img src="https://image.flaticon.com/icons/svg/25/25424.svg" width="4%"/></a> 
       <a href="#comment"><img src="https://image.flaticon.com/icons/svg/54/54916.svg" width="4%"/></a> 
       <img src="https://image.flaticon.com/icons/svg/126/126536.svg" width="4%"/>
       </div>
