--- a/feed/templates/feed/home.html
+++ b/feed/templates/feed/home.html
@@ -21,22 +21,24 @@
         <div class="row">
           <div class="card mb-3 col-4 mx-auto">
             <div class="card-body">
-              <p class="card-text">The users you are following have posted in a while</p>
+              <p class="card-text">The users you are following haven't posted in a while</p>
               <a href="{%url 'not_following'%}" class="btn btn-primary">EXPLORE USERS</a>
             </div>
           </div>
         </div>
-        {%for post in all_posts%}
-        <div class="mx-auto mb-2 col-md-4 col-lg-3 col-sm-12">
-          <a class="post" href="{{post.image_path.cdn_url}}">
-            <img style="min-height:160px ;" class="image img-fluid" src="{{post.image_path.cdn_url}}">
-            <span class="d-flex justify-content-between details">
-              <span ><i class="mr-1 far fa-heart"></i>{{post.likes}}</span><br>
-              <span><i class="far fa-comment mr-1"></i>{{post.comments}}</span>
-            </span>
-          </a>
+        <div class="posts row">
+          {%for post in all_posts%}
+          <div class="mx-auto mb-2 col-md-4 col-lg-3 col-sm-12">
+            <a class="post" href="/feed/post/{{post.id}}">
+              <img style="min-height:160px ;" class="image img-fluid" src="{{post.image_path.cdn_url}}">
+              <span class="d-flex justify-content-between details">
+                <span ><i class="mr-1 far fa-heart"></i>{{post.likes}}</span><br>
+                <span><i class="far fa-comment mr-1"></i>{{post.comments}}</span>
+              </span>
+            </a>
+          </div>
+          {%endfor%}
         </div>
-        {%endfor%}
         {%endif%}
       {%else%}
       <div class="row">
