--- a/users/templates/navbar.html
+++ b/users/templates/navbar.html
@@ -25,7 +25,7 @@
         </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href=""><i class="far fa-heart"></i>
+        <a class="nav-link" href="{%url 'favourite_posts'%}"><i class="far fa-heart"></i>
         </a>
       </li> 
       <li class="nav-item ">
