--- a/users/templates/users/not_following.html
+++ b/users/templates/users/not_following.html
@@ -20,7 +20,14 @@
     {% endfor %}
     </ul>
     {% else %}
-    <h5><i>No new people to add now! Please come back later!</i></h5>
+    <div class="row">
+      <div class="card mb-3 col-4 mx-auto">
+        <div class="card-body">
+          <p class="card-text">Sorry, seems like there are no more users to follow</p>
+          <a href="" class="btn btn-primary">INVITE FRIENDS</a>
+        </div>
+      </div>
+    </div>
     {% endif %}
   </div>
 </div>
