--- a/feed/templates/feed/home.html
+++ b/feed/templates/feed/home.html
@@ -1,6 +1,47 @@
 {%extends "base.html"%}
 {%block content%}
 
+  {%if new_user%}
+    <div class="row">
+      <div class="card mb-3 col-4 mx-auto">
+        <div class="card-body">
+          <p class="card-text">Follow more users to only their posts</p>
+          <a href="{%url 'not_following'%}" class="btn btn-primary">EXPLORE USERS</a>
+        </div>
+      </div>
+      <div class="card mb-3 col-4 mx-auto">
+        <div class="card-body">
+          <p class="card-text">Create new posts</p>
+          <a href="{%url 'new_post'%}" class="btn btn-primary">CREATE POST</a>
+        </div>
+      </div>
+      <div class="card mb-3 col-4 mx-auto">
+        <div class="card-body">
+          <p class="card-text">Edit your profile</p>
+          <a href="{%url 'edit_profile'%}" class="btn btn-primary">UPDATE PROFILE</a>
+        </div>
+      </div>
+    </div>  
+    <div class="posts row">
+      {%for post in all_posts%}
+      <div class="mx-auto mb-2 col-md-4 col-lg-3 col-sm-12">
+        <a class="post" href="/feed/post/{{post.id}}">
+          <img style="min-height:160px ;" class="image img-fluid" src="{{post.image_path.cdn_url}}">
+          <span class="d-flex justify-content-between details">
+            <span >
+            {%if post in posts_liked%}
+              <i style="color: red;" class="fas fa-heart"></i>
+            {%else%}
+             <i class="far fa-heart"></i>
+            {%endif%}
+              {{post.likes}}</span><br>
+            <span><i class="far fa-comment mr-1"></i>{{post.comments}}</span>
+          </span>
+        </a>
+      </div>
+      {%endfor%}
+    </div>
+  {%else%}
   {%if all_posts%}
       {%if following%}
         {%if following_posts%}
@@ -48,7 +89,13 @@
             <a class="post" href="/feed/post/{{post.id}}">
               <img style="min-height:160px ;" class="image img-fluid" src="{{post.image_path.cdn_url}}">
               <span class="d-flex justify-content-between details">
-                <span ><i class="mr-1 far fa-heart"></i>{{post.likes}}</span><br>
+                <span >
+                {%if post in posts_liked%}
+                  <i style="color: red;" class="fas fa-heart"></i>
+                {%else%}
+                 <i class="far fa-heart"></i>
+                {%endif%}
+                  {{post.likes}}</span><br>
                 <span><i class="far fa-comment mr-1"></i>{{post.comments}}</span>
               </span>
             </a>
@@ -71,7 +118,13 @@
           <a class="post" href="{{post.image_path.cdn_url}}">
             <img style="min-height:160px ;" class="image img-fluid" src="{{post.image_path.cdn_url}}">
             <span class="d-flex justify-content-between details">
-              <span ><i class="mr-1 far fa-heart"></i>{{post.likes}}</span><br>
+              <span >
+                {%if post in posts_liked%}
+                <i style="color: red;" class="fas fa-heart"></i>
+              {%else%}
+               <i class="far fa-heart"></i>
+              {%endif%}
+                {{post.likes}}</span><br>
               <span><i class="far fa-comment mr-1"></i>{{post.comments}}</span>
             </span>
           </a>
@@ -95,8 +148,7 @@
       </div>
     </div>
     {%endif%}
-
-
+  {%endif%}
 
 
 
