--- a/feed/templates/feed/new_image.html
+++ b/feed/templates/feed/new_image.html
@@ -3,6 +3,14 @@
 {%block title%}
 {{form.media }}
 {%endblock%}
+{%block search%}
+<form action="{% url 'search_posts' %}" class="form-inline mx-auto my-1">
+  <div class="md-form form-sm my-0">
+    <input class="form-control form-control-sm mr-sm-2 mb-0" name="post_name" id="post_name" type="text" placeholder="Search Post"
+      aria-label="Search">
+  </div>
+</form>
+{%endblock%}
 {%block content%}
 <div class="card new_image p-5">
   <div class="text-center card-header card-header-primary">
