--- a/feed/templates/feed/post.html
+++ b/feed/templates/feed/post.html
@@ -5,6 +5,14 @@
 {{block.super}}
 <link rel="stylesheet" href="{% static 'css/post.css' %}">
 {%endblock%}
+{%block search%}
+<form action="{% url 'search_posts' %}" class="form-inline mx-auto my-1">
+  <div class="md-form form-sm my-0">
+    <input class="form-control form-control-sm mr-sm-2 mb-0" name="post_name" id="post_name" type="text" placeholder="Search Post"
+      aria-label="Search">
+  </div>
+</form>
+{%endblock%}
 {%block content%}
 <div class="card mb-5">
     <div class="post">
