--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -3,6 +3,14 @@
 {%block title%}
 {{profile_form.media }}
 {%endblock%}
+{%block search%}
+<form action="" class="form-inline mx-auto my-1">
+  <div class="md-form form-sm my-0">
+    <input class="form-control form-control-sm mr-sm-2 mb-0" name="user_name" id="user_name" type="text" placeholder="Search Username"
+      aria-label="Search Username">
+  </div>
+</form>
+{%endblock%}
 {%block content%}
 <div class="card new_image p-5">
   <div class="card-header text-center card-header-primary">
