--- a/users/templates/users/not_following.html
+++ b/users/templates/users/not_following.html
@@ -1,4 +1,12 @@
 {%extends 'base.html'%}
+{%block search%}
+<form action="" class="form-inline mx-auto my-1">
+  <div class="md-form form-sm my-0">
+    <input class="form-control form-control-sm mr-sm-2 mb-0" name="user_name" id="user_name" type="text" placeholder="Search Username"
+      aria-label="Search Username">
+  </div>
+</form>
+{%endblock%}
 {%block content%}
 <div class="card my-5">
   <div class="card-body">
