--- a/users/templates/search.html
+++ b/users/templates/search.html
@@ -1,4 +1,21 @@
 {%extends 'base.html'%}
+{%block search%}
+{%if posts%}
+<form action="{% url 'search_posts' %}" class="form-inline mx-auto my-1">
+  <div class="md-form form-sm my-0">
+    <input class="form-control form-control-sm mr-sm-2 mb-0" name="post_name" id="post_name" type="text" placeholder="Search Post"
+      aria-label="Search">
+  </div>
+</form>
+{%else%}
+<form action="{%url 'search_users'%}" class="form-inline mx-auto my-1">
+  <div class="md-form form-sm my-0">
+    <input class="form-control form-control-sm mr-sm-2 mb-0" name="user_name" id="user_name" type="text" placeholder="Search Username"
+      aria-label="Search Username">
+  </div>
+</form>
+{%endif%}
+{%endblock%}
 {%block content%}
     {% if posts%}
       <h2 class="text-center">Found {{ posts|length }} post(s) containing term {{message}} in their name</h2>
@@ -22,6 +39,33 @@
         {%endfor%}
       </div>
       {%elif users%}
+      <h2 class="text-center">Found {{ users|length }} user(s) containing term {{message}} in their username</h2>
+      <div class="card my-5">
+        <div class="card-body">
+          <ul class="list-group list-group-flush">
+          {% for user in users %}
+          
+            <li class="list-group-item">
+              {%if user.profile.profile_photo%}
+                <img src="{{profile.profile_photo.cdn_url}}" class="rounded-circle z-depth-0" alt="avatar image" height="35">
+              {%else%}
+                <img src="https://www.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class="rounded-circle z-depth-0" alt="avatar image" height="35">
+              {%endif%}
+              <a class="text-dark" href=""><b class="ml-5">{{ user.username }}</b></a>
+              {%if user.profile in following%}
+              <small class="float-right">
+                  <a class='peach-gradient unfollow-btn btn mr-2' href="/users/remove/following/{{user.id}}">Unfollow</a>
+              </small>
+              {%else%}
+              <small class="float-right">
+                <a class='follow-btn btn mr-2' href="/users/add/following/{{user.id}}">Follow</a>
+              </small>
+              {%endif%}
+            </li>
+          {% endfor %}
+          </ul>
+        </div>
+      </div>
       {%else%}
       <h2 class="text-center">Found 0 results containing term {{message}}</h2>
       {%endif%}
