--- a/feed/templates/feed/post.html
+++ b/feed/templates/feed/post.html
@@ -29,7 +29,15 @@
       <a href=""><i class="fas fa-pen"></i></a> 
       <a href="/feed/post/{{post.id}}/delete/"><i class="far fa-trash-alt"></i></a>
       {%else%}
-      <img src="https://image.flaticon.com/icons/svg/149/149947.svg" width="3%" style="opacity:0.5;"/>
+      {%if post.profile in following%}
+      <small class="float-right">
+          <a class='peach-gradient unfollow-btn btn mr-2' href="/users/remove/following/{{post.profile.user_id}}">Unfollow</a>
+      </small>
+      {%else%}
+      <small class="float-right">
+        <a class='follow-btn btn mr-2' href="/users/add/following/{{post.profile.user_id}}">Follow</a>
+      </small>
+      {%endif%}
       {%endifequal%}
     </div>
     <div class="post-image" >
